--- a/sass/components/_bar-chart.scss
+++ b/sass/components/_bar-chart.scss
@@ -1,13 +1,21 @@
 /* Control positioning of the radio buttons */
 
 .bar-chart {
-    display: grid;
-    justify-items: center;
+    grid-column: 2 / span 1;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10rem;
+    width: 100%;
+    height: 100%;
     
 }
 
+
+
 .barchart-form {
-    margin-bottom: 3rem;
+    // margin-bottom: 3rem;
     display: flex;
     justify-content: center;
 }
@@ -32,8 +40,11 @@
     font-size: 1.2rem;
     font-style: italic;
     position: relative;
-    /*margin-top: 20px;*/
     cursor: pointer;
+    //padding-bottom: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .barchart-radio-btn {
@@ -41,21 +52,27 @@
     width: 1.5rem;
     border: 1px solid rgba(0, 0, 0, 0.5);
     border-radius: 50%;
-    display: inline-block;
-    position: absolute;
-    left: .6rem;
-    top: 2.5rem;
+    // display: inline-block;
+    // position: absolute;
+    // left: 0;
+    // top: 3rem;
 
-    display: grid;
-    justify-items: center;
+
+    // display: grid;
+    // justify-items: center;
+    // align-items: center;
+
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .barchart-radio-btn::after {
     content: "";
     display: block;
-    height: .7rem;
-    width: .7rem;
+    height: .5rem;
+    width: .5rem;
     border-radius: 50%;
     /*position: absolute;
     top: 50%;
@@ -67,7 +84,7 @@
 }
 
 .barchart-label:not(:first-of-type) {
-    margin-left: 2rem;
+    margin-left: 2.5rem;
 }
 
 
