--- a/sass/components/_line-chart.scss
+++ b/sass/components/_line-chart.scss
@@ -1,9 +1,17 @@
 /* Control positioning of the added dropdown menu */
 .line-chart {
-    display: grid;
-    justify-items: center;
+    grid-column: 3 / span 1;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+	margin-bottom: 10rem;
+    width: 100%;
+    height: 100%;
 }
 
-.linechart-select-menu {
-    margin-top: 1rem;
+select.linechart-select-menu {
+	display: block;
+    margin: 0 auto;
+    font-size: 1.2rem;
 }
