--- a/sass/components/_pie-chart.scss
+++ b/sass/components/_pie-chart.scss
@@ -1,5 +1,15 @@
 /* PIE CHART */
 
+.pie-chart {
+	// display: flex;
+ //    flex-direction: column;
+ //    align-items: center;
+ 	grid-column: 4 / span 1;
+ 	margin-bottom: 10rem;
+	width: 100%;
+    height: 100%;
+}
+
 .pie-label {
     fill: white;
     font-size: 1.1rem;
