--- a/sass/grid/_grid.scss
+++ b/sass/grid/_grid.scss
@@ -1,7 +1,6 @@
 .layout-grid {
     width: 100%;
-    height: auto;
+    height: 100%;
     display: grid;
-    grid-template-rows: min-content min-content min-content 20rem;   
-    // grid-row-gap: 5rem;
+    grid-template-rows: repeat(5, min-content);   
 }
