--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,8 +1,27 @@
 .footer {
-    grid-row: 4 / span 1;
-
+    grid-row: 5 / span 1;
     width: 100%;
     height: 100%;
+    
+	font-size: 2rem;
+	color: white;
+	letter-spacing: 2px;
+	padding: 20rem 8rem 4rem;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
 
-    background-color: rgba(0, 0, 0, 0.8)
+    & a:link,
+    & a:visited {
+		text-decoration: none;
+		color: white;
+		transition: all .5s;
+
+		&:hover {
+    	color: rgba(211, 47, 47, .75);
+    }
+    }
+
+    
 }
