--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,19 +1,34 @@
-@import url('https://fonts.googleapis.com/css?family=Baloo+Bhaijaan&display=swap');
 
 .header {
     grid-row: 1 / span 1;
-    font-size: 1.8rem;
+    width: 100%;
+    height: 100%;
+    background-color: #2a2c39;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2rem;
+    line-height: 2;
+    letter-spacing: .3rem;
+    color: white;
     text-align: center;
-    padding-top: 3rem;
+    padding: 10rem 2rem;
+    margin-bottom: 10rem;
     z-index: 1;
 
+    & span {
+        color: rgba(211, 47, 47, .75); 
+    }
+
     &__heading {
-    	letter-spacing: .3rem;
+    	
     }
 
     &__paragraph {
-    	font-family: 'Baloo Bhaijaan', cursive;
-	    color: #A52A2A;
-	    font-size: 4.4rem;
+    	font-size: 2.5rem;
+    }
+
+    @include respond(tab-port) {
+
+        margin-bottom: 3rem;
+        
     }
 }
