--- a/sass/layout/_updateable-charts.scss
+++ b/sass/layout/_updateable-charts.scss
@@ -1,9 +1,13 @@
 .updateable-charts {
-    grid-row: 3 / span 1;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(40rem, 1fr));    
-    margin-top: -10rem;
-    justify-items: center;
-    background-color: #f4f4f4;
-    padding: 8rem 0;
+	width: 100%;
+	height: 100%;
+    grid-row: 4 / span 1;
+   	padding-top: 10rem;
+   	background-color: #f4f4f4;
+
+	display: grid;
+	grid-template-columns: minmax(2rem, .25fr) repeat(3, 1fr) minmax(2rem, .25fr);
+	grid-column-gap: 2rem;
+
+    
 }
