--- a/sass/components/_bar-chart.scss
+++ b/sass/components/_bar-chart.scss
@@ -1,7 +1,7 @@
 /* Control positioning of the radio buttons */
 
 .bar-chart {
-    grid-column: 2 / span 1;
+    //grid-column: 2 / span 1;
 
     display: flex;
     flex-direction: column;
