--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,17 @@ ORDER: Base + typography > general layout + grid > page layout > components
 html {
   box-sizing: border-box;
   /*The browser standard font size is 16px. I want 1rem to equal 10px. 10px is 62.5% of 16px, hence the setting below. The percentage setting means that screen zooming will work coherently on the page. Thanks to Jonas Schmedtmann for this tip. */
-  font-size: 56.25%;
+  font-size: 62.5%;
   scroll-behavior: smooth; }
+  @media only screen and (max-width: 75em) {
+    html {
+      font-size: 56%; } }
+  @media only screen and (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media only screen and (max-width: 37.5em) {
+    html {
+      font-size: 42%; } }
 
 body {
   font-family: "Lato", sans-serif;
@@ -51,7 +60,6 @@ body {
 
 /* Control positioning of the radio buttons */
 .bar-chart {
-  grid-column: 2 / span 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -185,7 +193,6 @@ tspan.title.sub-title {
 
 /* Control positioning of the added dropdown menu */
 .line-chart {
-  grid-column: 3 / span 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -195,7 +202,7 @@ tspan.title.sub-title {
 
 select.linechart-select-menu {
   display: block;
-  margin: 0 auto;
+  margin: 1rem auto;
   font-size: 1.2rem; }
 
 /* SVG map linear gradient */
@@ -245,7 +252,6 @@ select.linechart-select-menu {
 
 /* PIE CHART */
 .pie-chart {
-  grid-column: 4 / span 1;
   margin-bottom: 10rem;
   width: 100%;
   height: 100%; }
@@ -280,7 +286,7 @@ select.linechart-select-menu {
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-rows: repeat(5, min-content); }
+  grid-template-rows: repeat(4, min-content) 40rem; }
 
 .footer {
   grid-row: 5 / span 1;
@@ -289,7 +295,7 @@ select.linechart-select-menu {
   font-size: 2rem;
   color: white;
   letter-spacing: 2px;
-  padding: 20rem 8rem 4rem;
+  padding: 15rem 8rem 4rem;
   background-color: rgba(0, 0, 0, 0.8);
   display: flex;
   justify-content: flex-end;
@@ -335,26 +341,27 @@ select.linechart-select-menu {
   justify-items: center;
   align-items: center;
   padding: 10rem 0; }
+  @media only screen and (max-width: 56.25em) {
+    .main {
+      grid-template-columns: minmax(4rem, 0.25fr) 1fr minmax(4rem, 0.25fr);
+      grid-template-rows: 20rem min-content min-content; } }
   .main__dynamic {
     grid-row: 1 / span 1;
     grid-column: 2 / span 2;
-    width: 100rem;
-    height: 100%;
-    margin-top: 10rem;
+    width: 80%;
     display: grid;
-    grid-template-columns: repeat(3, repeat(3, 1fr));
-    grid-template-rows: 1fr 2fr;
-    grid-row-gap: 2.5rem;
-    justify-items: center; }
+    grid-template-columns: repeat(4, 1fr);
+    grid-row-gap: 2.5rem; }
+    @media only screen and (max-width: 56.25em) {
+      .main__dynamic {
+        grid-column: 2 / span 1;
+        justify-items: start; } }
     .main__dynamic--block {
       display: flex;
       flex-direction: column; }
-    .main__dynamic--block:nth-child(1), .main__dynamic--block:nth-child(2), .main__dynamic--block:nth-child(3) {
-      grid-row: 1 / span 1; }
-    .main__dynamic--block-constits {
-      grid-row: 2 / span 1;
-      grid-column: 1 / span 3;
-      justify-self: end; }
+    @media only screen and (max-width: 56.25em) {
+      .main__dynamic--block-constits {
+        justify-self: start; } }
     .main__dynamic--list {
       list-style: none;
       column-count: 2;
@@ -364,16 +371,53 @@ select.linechart-select-menu {
       font-size: 1.6rem;
       font-style: italic;
       color: rgba(0, 0, 0, 0.6); }
-    .main__dynamic--heading {
+    .main__dynamic--heading, .main__dynamic--heading-static {
       text-transform: uppercase;
       font-size: 1.2rem;
       font-weight: 400; }
-    .main__dynamic--para {
-      font-size: 4rem;
+      @media only screen and (max-width: 56.25em) {
+        .main__dynamic--heading, .main__dynamic--heading-static {
+          font-size: 1.2rem; } }
+    .main__dynamic--para, .main__dynamic--para-static {
+      font-size: 3.5rem;
       font-weight: 300;
       color: rgba(0, 0, 0, 0.6); }
+      @media only screen and (max-width: 56.25em) {
+        .main__dynamic--para, .main__dynamic--para-static {
+          font-size: 2rem; } }
+  .main__static {
+    grid-row: 1 / span 1;
+    grid-column: 2 / span 2;
+    width: 80%;
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); }
+    @media only screen and (max-width: 56.25em) {
+      .main__static {
+        grid-column: 2 / span 1;
+        justify-items: start; } }
+    .main__static--block {
+      display: flex;
+      flex-direction: column; }
+    .main__static--heading, .main__static--heading-static {
+      text-transform: uppercase;
+      font-size: 1.2rem;
+      font-weight: 400; }
+      @media only screen and (max-width: 56.25em) {
+        .main__static--heading, .main__static--heading-static {
+          font-size: 1.2rem; } }
+    .main__static--para, .main__static--para-static {
+      font-size: 3.5rem;
+      font-weight: 300;
+      color: rgba(0, 0, 0, 0.6); }
+      @media only screen and (max-width: 56.25em) {
+        .main__static--para, .main__static--para-static {
+          font-size: 2rem; } }
   .main__svg--title {
     font-size: 1.3rem; }
+  .main__svg {
+    width: 100%;
+    height: auto; }
   .main__constit {
     display: none; }
   .main__chart {
@@ -381,27 +425,61 @@ select.linechart-select-menu {
     height: auto;
     grid-row: 2 / span 1;
     grid-column: 2 / span 1; }
+    @media only screen and (max-width: 56.25em) {
+      .main__chart {
+        margin-top: 9rem; } }
   .main__map {
-    width: 100%;
+    width: 80%;
     height: auto;
     grid-row: 2 / span 1;
     grid-column: 3 / span 1;
     margin-top: 8rem; }
+    @media only screen and (max-width: 56.25em) {
+      .main__map {
+        grid-row: 3 / span 1;
+        grid-column: 2 / span 1;
+        margin-top: -15rem; } }
 
 .profile {
   grid-row: 3 / span 1;
   width: 100%;
-  height: 30rem;
+  height: 40rem;
   overflow: hidden;
-  background-image: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.5), url(../img/map-belfast.jpg));
-  background-image: url(../img/map-belfast.jpg); }
+  padding: 0;
+  background-image: linear-gradient(rgba(42, 44, 57, 0.85), rgba(42, 44, 57, 0.85)), url("../img/map-belfast.jpg");
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-attachment: fixed; }
+  .profile__details {
+    width: 80%;
+    height: 60%;
+    color: white;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 3rem;
+    justify-content: center; }
+  .profile__heading {
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    letter-spacing: 1.5px; }
+    @media only screen and (max-width: 56.25em) {
+      .profile__heading {
+        font-size: 1.2rem; } }
+  .profile__para {
+    font-size: 3rem;
+    font-weight: 300;
+    letter-spacing: 1.5px; }
+    @media only screen and (max-width: 56.25em) {
+      .profile__para {
+        font-size: 2rem; } }
 
 .updateable-charts {
   width: 100%;
   height: 100%;
   grid-row: 4 / span 1;
-  padding-top: 10rem;
+  padding: 10rem;
   background-color: #f4f4f4;
   display: grid;
-  grid-template-columns: minmax(2rem, 0.25fr) repeat(3, 1fr) minmax(2rem, 0.25fr);
-  grid-column-gap: 2rem; }
+  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr)); }
