--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -13,16 +13,26 @@
 html {
     box-sizing: border-box;
      /*The browser standard font size is 16px. I want 1rem to equal 10px. 10px is 62.5% of 16px, hence the setting below. The percentage setting means that screen zooming will work coherently on the page. Thanks to Jonas Schmedtmann for this tip. */
-    font-size: 56.25%; 
+    font-size: 62.5%; 
     scroll-behavior: smooth;
 
-    // @include respond(tab-port) {
-    //     font-size:    62.5%
-    // }
+    @media only screen and (max-width: 75em) {
+        font-size: 56%;
+    }
+
+    @media only screen and (max-width: 56.25em) {
+        font-size: 50%;
+    }
+
+    @media only screen and (max-width: 37.5em) {
+        font-size: 42%;
+    }
 }
     
 body {
     font-family: "Lato", sans-serif;
     font-weight: 400;
     line-height: 1.7; 
+
+    
 }
