--- a/sass/components/_line-chart.scss
+++ b/sass/components/_line-chart.scss
@@ -1,6 +1,6 @@
 /* Control positioning of the added dropdown menu */
 .line-chart {
-    grid-column: 3 / span 1;
+    //grid-column: 3 / span 1;
     
     display: flex;
     flex-direction: column;
@@ -12,6 +12,6 @@
 
 select.linechart-select-menu {
 	display: block;
-    margin: 0 auto;
+    margin: 1rem auto;
     font-size: 1.2rem;
 }
