--- a/sass/components/_pie-chart.scss
+++ b/sass/components/_pie-chart.scss
@@ -4,7 +4,7 @@
 	// display: flex;
  //    flex-direction: column;
  //    align-items: center;
- 	grid-column: 4 / span 1;
+ 	//grid-column: 4 / span 1;
  	margin-bottom: 10rem;
 	width: 100%;
     height: 100%;
