--- a/sass/grid/_grid.scss
+++ b/sass/grid/_grid.scss
@@ -2,5 +2,5 @@
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-rows: repeat(5, min-content);   
+    grid-template-rows: repeat(4, min-content) 40rem;   
 }
