--- a/sass/layout/_profile.scss
+++ b/sass/layout/_profile.scss
@@ -1,12 +1,46 @@
 .profile {
 	grid-row: 3 / span 1;
 	width: 100%;
-	height: 30rem;
+	height: 40rem;
 	overflow: hidden;
+	padding: 0;
 
-	background-image: linear-gradient(rgba(white, .5), rgba(white, .5), url(../img/map-belfast.jpg));
-	//background-size: cover;
-	background-image: url(../img/map-belfast.jpg);
-	//background-color: red;
-	//background-image: fixed;
+	background-image: linear-gradient(rgba(42, 44, 57, .85), rgba(42, 44, 57, .85)), url('../img/map-belfast.jpg');
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-attachment: fixed;
+
+	&__details {
+		width: 80%;
+		height: 60%;
+		color: white;
+
+		display: grid;
+		grid-template-rows: repeat(2, 1fr);
+		grid-template-columns: repeat(2, 1fr);
+		grid-row-gap: 3rem;
+		justify-content: center;
+		
+	}
+
+	&__heading {
+		font-size: 1.6rem;
+		text-transform: uppercase;
+		letter-spacing: 1.5px;
+
+		@media only screen and (max-width: 56.25em) {
+	    	font-size: 1.2rem;
+        }
+	}
+
+	&__para {
+		font-size: 3rem;
+		font-weight: 300; 
+		letter-spacing: 1.5px;
+		
+		@media only screen and (max-width: 56.25em) {
+	    	font-size: 2rem;
+        }
+	}
 }
