--- a/css/style.css
+++ b/css/style.css
@@ -438,7 +438,11 @@ select.linechart-select-menu {
       .main__map {
         grid-row: 3 / span 1;
         grid-column: 2 / span 1;
-        margin-top: -15rem; } }
+        margin-top: -5rem;
+        margin-right: 5rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .main__map {
+        margin-top: -2rem; } }
 
 .profile {
   grid-row: 3 / span 1;
