--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -167,8 +167,14 @@
        @media only screen and (max-width: 56.25em) {
             grid-row: 3 / span 1;
             grid-column: 2 / span 1;
-            margin-top: -15rem;
+            margin-top: -5rem;
+            margin-right: 5rem;
             //margin-right: 10rem;
+        }
+
+        @media only screen and (max-width: 37.5em) {
+            margin-top: -2rem;
+            
         }
 
 
