--- a/sass/components/_bar-chart.scss
+++ b/sass/components/_bar-chart.scss
@@ -104,3 +104,7 @@
 #radio-3:checked ~ label[for='radio-3'] .barchart-radio-btn::after {
     opacity: 1;
 }
+
+#radio-4:checked ~ label[for='radio-4'] .barchart-radio-btn::after {
+    opacity: 1;
+}
