--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -14,6 +14,11 @@
     margin-bottom: 10rem;
     z-index: 1;
 
+    @media only screen and (max-width: 37.5em) {
+        font-size: 1.6rem;
+        margin-bottom: 0rem;
+    }
+
     & span {
         color: rgba(211, 47, 47, .75); 
     }
@@ -26,9 +31,5 @@
     	font-size: 2.5rem;
     }
 
-    @include respond(tab-port) {
-
-        margin-bottom: 3rem;
-        
-    }
+    
 }
