--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -4,7 +4,6 @@
     height: 100%;
     display: grid;
     grid-template-columns: minmax(4rem, .25fr) 50% 2fr minmax(4rem, .25fr);
-    //grid-template-columns: 50% 2fr;
     grid-template-rows: 20rem 1fr;
 
     justify-items: center;
@@ -12,38 +11,43 @@
 
     padding: 10rem 0;
 
-
     @media only screen and (max-width: 56.25em) {
-        grid-template-columns: minmax(4rem, .25fr) 1fr minmax(4rem, .25fr);
+        grid-template-columns: minmax(1rem, .25fr) 1fr minmax(1rem, .25fr);
         grid-template-rows: 20rem min-content min-content;
+    }
+
+    @media only screen and (max-width: 37.5em) {
+        padding: 1rem;
+        padding-top: 5rem;
     }
     
     &__dynamic {
         grid-row: 1 / span 1;
         grid-column: 2 / span 2;
         width: 80%;
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-row-gap: 2.5rem;
-        
+        height: 100%;
+
+        display: flex;
+        align-items: flex-start;
+
         @media only screen and (max-width: 56.25em) {
             grid-column: 2 / span 1;
-            justify-items: start;
+            flex-wrap: wrap;
+            width: 100%;
         }
-        
-        &--block {
-            display: flex;
-            flex-direction: column;
+
+        &--block:nth-child(1) {
+            flex: 1;
         }
-        
-        &--block:nth-child(1),
-        &--block:nth-child(2),
+        &--block:nth-child(2) {
+            flex: 1;
+        }
         &--block:nth-child(3) {
-            // grid-row: 1 / span 1;  
+            flex: 1;
         }
 
         &--block-constits {
-            
+            flex: 4;
 
             @media only screen and (max-width: 56.25em) {
                 justify-self: start;
@@ -55,27 +59,35 @@
             column-count: 2;
             column-gap: 3rem;
             margin-top: 1.5rem;
+            column-rule: 1px solid rgba(0, 0, 0, .4);
+
+            @media only screen and (max-width: 56.25em) {
+                column-count: 3;
+                //column-width: 8rem;
+            }
         }
 
         &--list-item {
             font-size: 1.6rem;
             font-style: italic;
             color: rgba(0, 0, 0, 0.6);
+
+            @media only screen and (max-width: 37.5em) {
+                font-size: 1.4rem;
+            }
         }
 
-        &--heading,
-        &--heading-static {
+        &--heading {
             text-transform: uppercase;
             font-size: 1.2rem;
             font-weight: 400;
 
             @media only screen and (max-width: 56.25em) {
-                font-size: 1.2rem;
+                
             }
         }
 
-        &--para,
-        &--para-static {
+        &--para {
             font-size: 3.5rem;
             font-weight: 300;
             color: rgba(0, 0, 0, 0.6);
@@ -83,7 +95,14 @@
             @media only screen and (max-width: 56.25em) {
                 font-size: 2rem;
             }
+
+            @media only screen and (max-width: 37.5em) {
+                font-size: 1.4rem;
+            }
+
         }
+
+       
 
     }
 
@@ -91,43 +110,58 @@
         grid-row: 1 / span 1;
         grid-column: 2 / span 2;
         width: 80%;
-        height: auto;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        height: 100%;
+        align-self: start;
+
+        display: flex;
+        align-items: flex-start;
         
-        
+
         @media only screen and (max-width: 56.25em) {
             grid-column: 2 / span 1;
-            justify-items: start;
+            flex-wrap: wrap;
+            width: 100%;
         }
-        
+
+        @media only screen and (max-width: 37.5em) {
+           
+        }
+
         &--block {
-            display: flex;
-            flex-direction: column;
+            
         }
-        
-        &--heading,
+
+        &--block:nth-child(1) {
+            //flex: 2;
+            flex-basis: 30%;
+        }
+
+        &--block:nth-child(2) {
+            //flex: 1;
+            flex-basis: 20%;
+
+        }
+
+        &--block:nth-child(3) {
+            //flex: 4;
+            flex-basis: 50%;
+        }
+
         &--heading-static {
             text-transform: uppercase;
             font-size: 1.2rem;
             font-weight: 400;
-
-            @media only screen and (max-width: 56.25em) {
-                font-size: 1.2rem;
-            }
         }
 
-        &--para,
         &--para-static {
-            font-size: 3.5rem;
+            font-size: 2.5rem;
             font-weight: 300;
-            color: rgba(0, 0, 0, 0.6);
+            color: rgba(0, 0, 0, 0.6); 
 
             @media only screen and (max-width: 56.25em) {
-                font-size: 2rem;
+                font-size: 1.6rem;
             }
         }
-
     }
 
     &__svg--title {
@@ -144,21 +178,23 @@
     }
 
     &__chart {
-        width: 100%; // Mobile setting
+        width: 100%;
         height: auto;
         grid-row: 2 / span 1;
         grid-column: 2 / span 1;
 
         @media only screen and (max-width: 56.25em) {
-            //grid-row: 1 / span 1;
-            //grid-column: 2 / span 1;
-            //width: 35rem;
-            margin-top: 9rem;
+            grid-column: 2 / span 1;
+         
+        }
+
+        @media only screen and (max-width: 37.5em) {
+            margin-top: 2rem; 
         }
     }
 
     &__map {
-       width: 80%; // Mobile setting
+       width: 80%;
        height: auto;
        grid-row: 2 / span 1;
        grid-column: 3 / span 1;
@@ -169,12 +205,13 @@
             grid-column: 2 / span 1;
             margin-top: -5rem;
             margin-right: 5rem;
-            //margin-right: 10rem;
         }
 
         @media only screen and (max-width: 37.5em) {
             margin-top: -2rem;
-            
+            margin-top: 2rem;
+            margin-right: 0;
+            width: 100%;
         }
 
 
