--- a/sass/layout/_updateable-charts.scss
+++ b/sass/layout/_updateable-charts.scss
@@ -6,5 +6,10 @@
    	background-color: #f4f4f4;
 
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
+
+
+    @media only screen and (max-width: 37.5em) {
+        padding: 2rem;
+    }
 }
