--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -30,9 +30,7 @@ html {
 }
     
 body {
-    font-family: "Lato", sans-serif;
+    font-family: 'Lato', sans-serif;
     font-weight: 400;
     line-height: 1.7; 
-
-    
 }
